[package]
name = "mdquery-rs"
version = "0.2.1"
edition = "2021"
description = "A Rust binding library for macOS Spotlight search using Metadata Query API"
authors = ["BB-fat <bbfat3047@qq.com>"]
license = "MIT"
repository = "https://github.com/BB-fat/mdquery-rs"
keywords = ["macos", "spotlight", "search", "metadata", "finder"]
categories = ["api-bindings", "filesystem", "os::macos-apis"]
readme = "README.md"

[features]
default = []
async = []

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

# 为Apple平台和文档编译添加依赖
[target.'cfg(target_vendor = "apple")'.dependencies]
anyhow = "1"
objc2 = "0.6"
objc2-core-foundation = "0.3"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
